# crockford

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: decode.rs  encode.rs
examples/: croc.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs
resources/: u8-mapping.txt
src/: decoding.rs  encoding.rs  error.rs  format.rs  iterator.rs  lib.rs
