[package]
name = "crockford"
version = "1.1.0"
authors = ["J/A <archer884@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/crockford"
homepage = "https://github.com/archer884/crockford"
repository = "https://github.com/archer884/crockford"
keywords = ["crockford", "base32"]
categories = ["encoding", "parsing", "value-formatting", "web-programming"]
description = """
Provides Crockford Base32 encoding for identifiers (e.g. u64 values).
"""

[badges]
travis-ci = { repository = "archer884/crockford" }

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
